<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/gradient_bg"
    tools:context="com.eurofins.weatherapp.OutputFragment">

    <ImageView
        android:id="@+id/search_button"
        android:layout_width="@dimen/sixtynine_dp"
        android:layout_height="@dimen/fortyseven_dp"
        android:layout_alignParentEnd="true"
        android:background="@drawable/ic_baseline_search_24"
        android:contentDescription="@string/search_button" />

    <TextView
        android:id="@+id/text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_button"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/six_dp"
        android:text="@string/temperature"
        android:textAlignment="center"
        android:textSize="@dimen/thirty_sp" />

    <LinearLayout
        android:id="@+id/description_box"
        android:layout_width="@dimen/onefifty_dp"
        android:layout_height="@dimen/onefifty_dp"
        android:layout_below="@id/text_view"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/thirtysix_dp"
        android:layout_marginTop="@dimen/twentyfour_dp"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textAlignment="center"
            android:textColor="#FF000000"
            android:textSize="@dimen/eighteen_sp"
            app:drawableTopCompat="@drawable/info" />

    </LinearLayout>

    <LinearLayout

        android:layout_width="169dp"
        android:layout_height="142dp"
        android:layout_below="@id/text_view"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/twentyfour_dp"
        android:layout_marginEnd="@dimen/fortyeight_dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="41dp"
            android:layout_height="39dp"
            android:contentDescription="@string/cloud_cover"
            android:src="@drawable/ic_baseline_cloud_24" />

        <TextView
            android:id="@+id/cloud_cover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cloud_cover"
            android:textAlignment="center"
            android:textColor="#FF000000"
            android:textSize="@dimen/eighteen_sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/pressure_box"
        android:layout_width="191dp"
        android:layout_height="144dp"
        android:layout_below="@id/description_box"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pressure"
            android:textAlignment="center"
            android:textColor="#FF000000"
            android:textSize="@dimen/eighteen_sp"
            app:drawableTopCompat="@drawable/pressure"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="@dimen/twofortyfourdp"
        android:layout_height="wrap_content"
        android:layout_below="@id/pressure_box"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/thirtyseven_dp"
        android:layout_marginEnd="0dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/next_screen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_button"
            android:text="@string/display_daily_forecast" />
    </LinearLayout>

</RelativeLayout>